alb-loadbalancer-ingress/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
spec:
  selector:
    matchLabels:
      run: nginx-deploy
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx-deploy
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
