alb-loadbalancer-ingress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deploy
  labels:
    run: nginx-deploy
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31000
    protocol: TCP
  type: NodePort
  selector:
    run: nginx-deploy
